--- a/package.json
+++ b/package.json
@@ -26,20 +26,28 @@
   },
   "homepage": "https://github.com/m-llo/Project3Team10",
   "devDependencies": {
-    "concurrently": "^6.2.0",
     "nodemon": "^2.0.7"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
     "bootstrap": "^5.0.1",
-    "concurrently": "^6.2.0",
+    "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "helmet": "^4.6.0",
     "if-env": "^1.0.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.11",
-    "react-router-dom": "^5.2.0"
+    "morgan": "^1.10.0",
+    "mysql2": "^2.2.5",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.0",
+    "react-router-dom": "^5.2.0",
+    "sequelize": "^6.6.2"
   }
 }
